add forecast package

--- a/forecast/Energy Prediction.ipynb
+++ b/forecast/Energy Prediction.ipynb
@@ -1716,7 +1716,15 @@
     "#initializing the object\n",
     "mv_net = MV_LSTM(n_features,n_timesteps).float().to(device)\n",
     "#insert the trained model from the saved dictionary\n",
+    "mv_net.load_state_dict(t# these need to stay like this\n",
+    "\n",
+    "n_features = 14 # this is number of input time series\n",
+    "n_timesteps = 48 # this is number of timesteps (hours)\n",
+    "#initializing the object\n",
+    "mv_net = MV_LSTM(n_features,n_timesteps).float().to(device)\n",
+    "#insert the trained model from the saved dictionary\n",
     "mv_net.load_state_dict(torch.load('trained_energy'))\n",
+    "orch.load('trained_energy'))\n",
     "\n",
     "#make the network in evaluation mode\n",
     "mv_net.eval()"
@@ -1752,7 +1760,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1809,7 +1816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
